# johnethel-school

./: .gitignore  Cargo.toml  Dockerfile  fly.toml  justfile
.github/workflows/: fly.yml
backend/: .gitignore  Cargo.toml
backend/templates/: index.html  settings.json
backend/templates/static/_astro/: index.DAcoChUX.css
frontend/: astro.config.mjs
frontend/src/components/: ThemeToggle.astro
frontend/src/layouts/: Layout.astro
node/: package-lock.json  tailwind.config.js
src/: main.rs  router.rs  routes.rs  utils.rs
src/views/: about.rs  blog.rs  components.rs  contact.rs  forgot_password.rs  gallery.rs  index.rs  layout.rs  login.rs  mod.rs  svgs.rs
static/css/: tailwind.css
templates/: index.html  settings.json
