[package]
name = "johnethel-school"
version = "0.1.0"
edition = "2021"

[dependencies]
html-to-string-macro = "0.2.5"
poem = { version = "3.0.0", features = ["static-files"] }
poem-openapi = { version = "5.0.0", features = ["swagger-ui"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
